Fixed shifting footer issue.

--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,6 +7,7 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  letter-spacing: .5px;
 }
 
 .hero {
@@ -23,11 +24,12 @@ body {
   align-items: center;
   justify-content: space-between;
   width: 40vw;
+  margin-bottom: 1vh;
 }
 .hero-img {
   float: left;
   position: relative;
-  margin: 5vw;
+  margin-right: 15vw;
   top: 100px;
   left: 5vw;
 }
@@ -44,15 +46,27 @@ body {
   background-image: url(../images/frame.png);
   background-size: cover;
   width: 40vw;
-  float: left;
+
+  padding: 3%;
   display: flex;
   flex-direction: column;
-  padding: 2%;
   margin-left: 5vw;
+}
+.card-content {
+
+}
+.card-title {
+  color: #06365f;
+  font-size: 2rem;
 }
 footer {
   display: flex;
-  min-width: 50vw;
   justify-content: center;
   padding-top: 10vh;
+  align-items: center;
+  bottom: 100px;
+}
+.footer-content {
+  /* width: 75%; */
+
 }
